--- a/public/assets/styles/css/style.css
+++ b/public/assets/styles/css/style.css
@@ -1,18 +1,588 @@
-/* Error: Undefined variable.
- *   ,
- * 3 | @media #{$mobile} {
- *   |          ^^^^^^^
- *   '
- *   public\assets\styles\sass\components\_footer.scss 3:10  @use
- *   public\assets\styles\sass\style.scss 2:1                root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a   \2577 \a 3 \2502  @media #{$mobile} {\d\a   \2502           ^^^^^^^\a   \2575 \a   public\\assets\\styles\\sass\\components\\_footer.scss 3:10  @use\a   public\\assets\\styles\\sass\\style.scss 2:1                root stylesheet";
+#catCSS {
+  width: 100%;
 }
+
+.cat {
+  position: relative;
+  height: 10vh;
+  width: 13vh;
+  margin-top: 2em;
+  margin-left: 1em;
+}
+
+.ear {
+  position: absolute;
+  top: -25%;
+  height: 60%;
+  width: 25%;
+  background: #fff;
+}
+.ear::before, .ear::after {
+  content: "";
+  position: absolute;
+  bottom: 34%;
+  height: 10%;
+  width: 5%;
+  border-radius: 50%;
+  background: #161616;
+}
+.ear::after {
+  transform-origin: 50% 100%;
+}
+
+.ear--left {
+  left: -7%;
+  border-radius: 70% 30% 0% 0%/100% 100% 0% 0%;
+  transform: rotate(-15deg);
+}
+.ear--left::before, .ear--left::after {
+  right: 10%;
+}
+.ear--left::after {
+  transform: rotate(-45deg);
+}
+
+.ear--right {
+  right: -7%;
+  border-radius: 30% 70% 0% 0%/100% 100% 0% 0%;
+  transform: rotate(15deg);
+}
+.ear--right::before, .ear--right::after {
+  left: 10%;
+}
+.ear--right::after {
+  transform: rotate(45deg);
+}
+
+.face {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: #161616;
+  border-radius: 50%;
+}
+
+.eye {
+  position: absolute;
+  top: 35%;
+  height: 30%;
+  width: 31%;
+  background: #fff;
+  border-radius: 50% 50% 50% 50%/60% 60% 40% 40%;
+}
+.eye::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 0;
+  width: 100%;
+  border-radius: 0 0 50% 50%/0 0 40% 40%;
+  background: #161616;
+  animation: blink 4s infinite ease-in;
+}
+@keyframes blink {
+  0% {
+    height: 0;
+  }
+  90% {
+    height: 0;
+  }
+  92.5% {
+    height: 100%;
+  }
+  95% {
+    height: 0;
+  }
+  97.5% {
+    height: 100%;
+  }
+  100% {
+    height: 0;
+  }
+}
+.eye::before {
+  content: "";
+  position: absolute;
+  top: 60%;
+  height: 10%;
+  width: 15%;
+  background: #fff;
+  border-radius: 50%;
+}
+
+.eye--left {
+  left: 0;
+}
+.eye--left::before {
+  right: -5%;
+}
+
+.eye--right {
+  right: 0;
+}
+.eye--right::before {
+  left: -5%;
+}
+
+.eye-pupil {
+  position: absolute;
+  top: 25%;
+  height: 50%;
+  width: 20%;
+  background: #161616;
+  border-radius: 50%;
+  animation: look-around 4s infinite;
+}
+@keyframes look-around {
+  0% {
+    transform: translate(0);
+  }
+  5% {
+    transform: translate(50%, -25%);
+  }
+  10% {
+    transform: translate(50%, -25%);
+  }
+  15% {
+    transform: translate(-100%, -25%);
+  }
+  20% {
+    transform: translate(-100%, -25%);
+  }
+  25% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+.eye--left .eye-pupil {
+  right: 30%;
+}
+.eye--right .eye-pupil {
+  left: 30%;
+}
+.eye-pupil::after {
+  content: "";
+  position: absolute;
+  top: 30%;
+  right: -5%;
+  height: 20%;
+  width: 35%;
+  border-radius: 50%;
+  background: #fff;
+}
+
+.muzzle {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  height: 6%;
+  width: 10%;
+  background: #fff;
+  transform: translateX(-50%);
+  border-radius: 50% 50% 50% 50%/30% 30% 70% 70%;
+}
+
+#footer {
+  position: fixed;
+  left: 0;
+  bottom: -100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: black;
+  font-family: Raleway;
+  color: white;
+  text-align: center;
+  width: 100%;
+  margin-left: 0;
+  margin-right: 0;
+  transition: bottom 1s;
+  z-index: 1000;
+}
+#footer:hover {
+  bottom: 10;
+  transition: bottom 1s;
+}
+#footer .container {
+  margin: 0 auto;
+}
+#footer h2 {
+  display: none;
+  font-size: 0;
+}
+#footer .sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+#footer .foot-box {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-top: 1.5vh;
+  padding-bottom: 3.5vh;
+  max-height: 10vh;
+}
+#footer .foot-box .timer {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  font-size: 2.5vh;
+}
+#footer .foot-box .timer p:first-of-type {
+  color: white;
+  font-weight: bold;
+  font-size: 1em;
+  margin-top: 2vh;
+  padding: 0.8vh;
+  margin-left: 1vh;
+  box-shadow: 6px 8px 0px #37474f;
+  border: white 2px solid;
+  border-radius: 500px;
+  text-align: center;
+}
+#footer .foot-box .timer span {
+  margin-right: 0.2px;
+}
+#footer .foot-box .timer:nth-of-type(2) {
+  width: 50%;
+  margin-top: 4em;
+  padding-top: 2.5em;
+  margin-right: auto;
+}
+#footer .foot-box .retour-haut {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+  padding-top: 2vh;
+  padding-right: 3vh;
+}
+#footer .foot-box .retour-haut .topButton {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+#footer .foot-box .retour-haut .topButton img {
+  width: 8vh;
+  height: 8vh;
+  display: block;
+}
+#footer .foot-content {
+  border: 2px solid white;
+  border-radius: 60px;
+  margin: 0 1.1em 0;
+  padding: 0.5rem;
+  height: 5%;
+}
+#footer .foot-content > div {
+  color: white;
+}
+#footer .foot-content .footer-top,
+#footer .foot-content .footer-bottom {
+  display: flex;
+  justify-content: center;
+}
+#footer .foot-content .footer-top i,
+#footer .foot-content .footer-bottom i {
+  color: #ec407a;
+  font-size: 2rem;
+  margin-right: 10px;
+}
+#footer .foot-content .footer-top {
+  padding: 1rem;
+}
+#footer .foot-content .footer-top > a > img {
+  padding-top: 1.5em;
+  margin-right: calc(0.8rem + 1vw);
+  width: 120px;
+  margin-top: -1.5em;
+}
+#footer .foot-content .footer-top address {
+  font-style: normal;
+}
+#footer .foot-content .footer-top address p {
+  margin: 0;
+  text-align: left;
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
+}
+#footer .foot-content .footer-top address p a {
+  text-decoration: none;
+  color: white;
+  margin-left: 0.5rem;
+}
+#footer .foot-content .footer-top address p:first-of-type {
+  padding-top: 1rem;
+}
+#footer .foot-content .footer-separation {
+  height: 2px;
+  width: 70%;
+  margin: auto;
+  background-color: white;
+}
+#footer .foot-content .footer-bottom {
+  text-align: left;
+  padding-bottom: 0;
+  font-size: 1em;
+}
+#footer .foot-content .footer-bottom .footer-nav,
+#footer .foot-content .footer-bottom .footer-rs-legal {
+  font-size: 1rem;
+  margin: 0.5rem;
+}
+#footer .foot-content .footer-bottom li {
+  list-style: none;
+}
+#footer .foot-content .footer-bottom a {
+  text-decoration: none;
+  padding: calc(0.2rem + 0.6vw) 0;
+  color: white;
+}
+#footer .foot-content .footer-bottom a:hover {
+  color: #ec407a;
+  text-decoration: underline;
+}
+#footer .copyright {
+  display: block;
+  color: white !important;
+  font-size: 10px;
+  z-index: 2000;
+  padding: 1rem 0;
+}
+#footer .copyright p {
+  color: white !important;
+  text-align: center !important;
+  margin: 0;
+}
+#footer .copyright p small {
+  font-size: 10px;
+}
+
+@media only screen and (min-width: 576px) {
+  #footer .footer-top i,
+  #footer .footer-bottom i {
+    font-size: 1.6rem;
+  }
+  #footer .footer-top {
+    margin: auto;
+  }
+  #footer .footer-top > a > img {
+    margin-right: 5vw;
+    width: 12.5rem;
+  }
+  #footer .footer-top address p {
+    font-size: 1.6rem;
+  }
+  #footer .footer-separation {
+    height: 2px;
+    width: 85%;
+    margin: 0 auto calc(1rem + 2.5vw) auto;
+  }
+  #footer .footer-bottom {
+    text-align: left;
+    border-bottom: 1px solid white;
+  }
+  #footer .footer-bottom .footer-nav,
+  #footer .footer-bottom .footer-rs-legal {
+    font-size: 1rem;
+    margin: 0 10vw;
+  }
+  #footer .footer-bottom .footer-nav i,
+  #footer .footer-bottom .footer-rs-legal i {
+    font-size: 3.7rem;
+    margin: 0 2.8rem 2.8rem 0;
+  }
+  #footer .footer-bottom li {
+    padding: 0.5rem 0;
+  }
+  #footer .copyright p small {
+    font-size: 15px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  #footer .footer-top i,
+  #footer .footer-bottom i {
+    font-size: 1.6rem;
+  }
+  #footer .footer-top {
+    margin: auto;
+  }
+  #footer .footer-top > a > img {
+    margin-right: 5vw;
+    width: 12.5rem;
+  }
+  #footer .footer-top address p {
+    font-size: 1.6rem;
+  }
+  #footer .footer-separation {
+    height: 2px;
+    width: 85%;
+    margin: 0 auto calc(1rem + 2.5vw) auto;
+  }
+  #footer .footer-bottom {
+    text-align: left;
+    border-bottom: 1px solid white;
+  }
+  #footer .footer-bottom .footer-nav,
+  #footer .footer-bottom .footer-rs-legal {
+    font-size: 1rem;
+    margin: 0 10vw;
+  }
+  #footer .footer-bottom .footer-nav i,
+  #footer .footer-bottom .footer-rs-legal i {
+    font-size: 3.7rem;
+    margin: 0 2.8rem 2.8rem 0;
+  }
+  #footer .footer-bottom li {
+    padding: 0.5rem 0;
+  }
+  #footer .copyright p small {
+    font-size: 15px;
+  }
+}
+@media only screen and (min-width: 850px) {
+  #footer {
+    bottom: -70vh;
+  }
+  #footer .footer-top i,
+  #footer .footer-bottom i {
+    font-size: 1.6rem;
+  }
+  #footer .footer-top {
+    margin: auto;
+  }
+  #footer .footer-top > a > img {
+    margin-right: 5vw;
+    width: 12.5rem;
+  }
+  #footer .footer-top address p {
+    font-size: 1.6rem;
+  }
+  #footer .footer-separation {
+    height: 2px;
+    width: 85%;
+    margin: 0 auto calc(1rem + 2.5vw) auto;
+  }
+  #footer .footer-bottom {
+    text-align: left;
+    border-bottom: 1px solid white;
+  }
+  #footer .footer-bottom .footer-nav,
+  #footer .footer-bottom .footer-rs-legal {
+    font-size: 1rem;
+    margin: 0 10vw;
+  }
+  #footer .footer-bottom .footer-nav i,
+  #footer .footer-bottom .footer-rs-legal i {
+    font-size: 3.7rem;
+    margin: 0 2.8rem 2.8rem 0;
+  }
+  #footer .footer-bottom li {
+    padding: 0.5rem 0;
+  }
+  #footer .copyright p small {
+    font-size: 15px;
+  }
+}
+@media only screen and (min-width: 992px) {
+  #footer {
+    bottom: -60vh;
+  }
+  #footer .footer-top i,
+  #footer .footer-bottom i {
+    font-size: 1.6rem;
+  }
+  #footer .footer-top {
+    margin: auto;
+  }
+  #footer .footer-top > a > img {
+    margin-right: 5vw;
+    width: 12.5rem;
+  }
+  #footer .footer-top address p {
+    font-size: 1.6rem;
+  }
+  #footer .footer-separation {
+    height: 2px;
+    width: 85%;
+    margin: 0 auto calc(1rem + 2.5vw) auto;
+  }
+  #footer .footer-bottom {
+    text-align: left;
+    border-bottom: 1px solid white;
+  }
+  #footer .footer-bottom .footer-nav,
+  #footer .footer-bottom .footer-rs-legal {
+    font-size: 1rem;
+    margin: 0 10vw;
+  }
+  #footer .footer-bottom .footer-nav i,
+  #footer .footer-bottom .footer-rs-legal i {
+    font-size: 3.7rem;
+    margin: 0 2.8rem 2.8rem 0;
+  }
+  #footer .footer-bottom li {
+    padding: 0.5rem 0;
+  }
+  #footer .copyright p small {
+    font-size: 15px;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  #footer {
+    bottom: -60vh;
+  }
+  #footer .footer-top i,
+  #footer .footer-bottom i {
+    font-size: 1.6rem;
+  }
+  #footer .footer-top {
+    margin: auto;
+  }
+  #footer .footer-top > a > img {
+    margin-right: 5vw;
+    width: 12.5rem;
+  }
+  #footer .footer-top address p {
+    font-size: 1.6rem;
+  }
+  #footer .footer-separation {
+    height: 2px;
+    width: 85%;
+    margin: 0 auto calc(1rem + 2.5vw) auto;
+  }
+  #footer .footer-bottom {
+    text-align: left;
+    border-bottom: 1px solid white;
+  }
+  #footer .footer-bottom .footer-nav,
+  #footer .footer-bottom .footer-rs-legal {
+    font-size: 1rem;
+    margin: 0 10vw;
+  }
+  #footer .footer-bottom .footer-nav i,
+  #footer .footer-bottom .footer-rs-legal i {
+    font-size: 3.7rem;
+    margin: 0 2.8rem 2.8rem 0;
+  }
+  #footer .footer-bottom li {
+    padding: 0.5rem 0;
+  }
+  #footer .copyright p small {
+    font-size: 15px;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
