--- a/public/assets/styles/sass/components/_footer.scss
+++ b/public/assets/styles/sass/components/_footer.scss
@@ -1,9 +1,7 @@
-@use '../abstracts/responsive';
+@use '../abstracts/varcolors';
+@use 'catcss.scss';
 
-@media #{$mobile} {
-    // Styles pour les appareils moyens (max-width: 575px)
-}
-
+// Styles par défaut (mobile)
 #footer {
     position: fixed;
     left: 0;
@@ -55,12 +53,15 @@
         padding-bottom: 3.5vh;
         max-height: 10vh;
         
+        #cat {}
+
         .timer {
             display: flex;
             justify-content: flex-start;
             align-items: center;
             width: 100%;
             font-size: 2.5vh;
+        
             
             p:first-of-type {
                 color: white;
@@ -220,9 +221,8 @@
     }
 }
 
-@media #{$small} {
-    // Styles pour les petits appareils (min-width: 576px)
-    
+// Petits appareils (min-width: 576px)
+@media #{varcolors.$small} {
     #footer {
         .footer-top,
         .footer-bottom {
@@ -278,9 +278,8 @@
     }
 }
 
-@media #{$medium} {
-    // Styles pour les appareils moyens (min-width: 768px)
-    
+// Appareils moyens (min-width: 768px)
+@media #{varcolors.$medium} {
     #footer {
         .footer-top,
         .footer-bottom {
@@ -336,9 +335,8 @@
     }
 }
 
-@media #{$medium-large} {
-    // Styles pour les appareils intermédiaires (min-width: 850px)
-    
+// Appareils intermédiaires (min-width: 850px)
+@media #{varcolors.$mediumLarge} {
     #footer {
         bottom: -70vh;
         
@@ -396,9 +394,8 @@
     }
 }
 
-@media #{$large} {
-    // Styles pour les grands appareils (min-width: 992px)
-    
+// Grands appareils (min-width: 992px)
+@media #{varcolors.$large} {
     #footer {
         bottom: -60vh;
         
@@ -456,9 +453,8 @@
     }
 }
 
-@media #{$extra} {
-    // Styles pour les très grands appareils (min-width: 1200px)
-    
+// Très grands appareils (min-width: 1200px)
+@media #{varcolors.$extra} {
     #footer {
         bottom: -60vh;
         
@@ -516,10 +512,12 @@
     }
 }
 
-@media #{$extra-large} {
-    // Styles pour les super grands écrans (min-width: 1400px)
+// Super grands écrans (min-width: 1400px)
+@media #{varcolors.$extraLarge} {
+    // Styles spécifiques si nécessaire
 }
 
-@media #{$ultra} {
-    // Styles pour les ultra grands écrans (min-width: 1600px)
+// Ultra grands écrans (min-width: 1600px)
+@media #{varcolors.$ultra} {
+    // Styles spécifiques si nécessaire
 }
