--- a/views/templates/layout.html.twig
+++ b/views/templates/layout.html.twig
@@ -11,8 +11,8 @@
         {% endblock %}
     </title>
     
-    <link rel="stylesheet" href="public/assets/styles/css/normalize.css">
-    <link rel="stylesheet" href="public/assets/styles/css/style.css" type="text/css">
+    <link rel="stylesheet" href="assets/styles/css/normalize.css">
+    <link rel="stylesheet" href="assets/styles/css/style.css" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
