--- a/views/templates/subpages/_catcss.html.twig
+++ b/views/templates/subpages/_catcss.html.twig
@@ -1,13 +1,18 @@
-<div class="cat" aria-hidden="true" role="img" aria-label="Illustration décorative d'un chat">
-    <div class="ear ear--left"></div>
-    <div class="ear ear--right"></div>
+<div class="cat">
+    <div class="ear ear--left">
+    </div>
+    <div class="ear ear--right">
+    </div>
     <div class="face">
         <div class="eye eye--left">
-            <div class="eye-pupil"></div>
+             <div class="eye-pupil">
+             </div>
         </div>
         <div class="eye eye--right">
-            <div class="eye-pupil"></div>
+             <div class="eye-pupil">
+             </div>
         </div>
-        <div class="muzzle"></div>
+        <div class="muzzle">
+        </div>
     </div>
 </div>
