--- a/views/templates/subpages/_footer.html.twig
+++ b/views/templates/subpages/_footer.html.twig
@@ -3,9 +3,10 @@
     
     <div class="foot-box">
         <div class="timer" role="timer" aria-live="polite">
-            <p>Temps écoulé: <span id="time">00:00:00</span></p>
-            <div class="catCSS" aria-hidden="true">
+             <div class="catCSS">
                 {% include "subpages/_catcss.html.twig" %}
+            </div>
+            <p>Temps écoulé: <span id="time">00:00:00</span></p>
             </div>
         </div>
         
