--- a/public/assets/styles/sass/abstracts/_varcolors.scss
+++ b/public/assets/styles/sass/abstracts/_varcolors.scss
@@ -29,3 +29,6 @@ $extraLarge: "only screen and (min-width: 1400px)";
 
 // Ultra grands écrans (1600px et plus)
 $ultra: "only screen and (min-width: 1600px)";
+
+// Ultra ultra grand ecran
+$huge: "(min-width: 2000px)";
