--- a/public/assets/styles/sass/components/_catcss.scss
+++ b/public/assets/styles/sass/components/_catcss.scss
@@ -1,196 +1,247 @@
+@use '../abstracts/mixins';
+
 $color-black: #161616;
 $color-white: #fff;
-$size: 10vh; // (Fully responsive)
 
-
-#catCSS {
-	
-	width: 100%;
-	
+// Le chat s'adapte automatiquement à la hauteur du foot-box
+.catCSS {
+    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%; // Prend toute la hauteur disponible
 }
-	
-// Cat
+
+// Cat - taille relative au conteneur
 .cat {
-	position: relative;
-	height: $size;
-	width: $size*1.3;
-	margin-top:2em;
-	margin-left:1em;
-  	
+    position: relative;
+    height: 70%; // 70% de la hauteur du foot-box (donc ~7vh sur 10vh)
+    aspect-ratio: 1.3 / 1; // Maintient les proportions largeur/hauteur
+    width: auto;
 }
 
 // Ears
 .ear {
-	position: absolute;
-	top: -25%;
-	height: 60%;
-	width: 25%;
-	background: $color-white;
-	
-	// Ear hair
-	&::before,
-	&::after {
-		content: '';
-		position: absolute;
-		bottom: 34%;
-		height: 10%;
-		width: 5%;
-		border-radius: 50%;
-		background: $color-black;
-	}
-	
-	&::after {
-		transform-origin: 50% 100%;
-	}
+    position: absolute;
+    top: -25%;
+    height: 60%;
+    width: 25%;
+    background: $color-white;
+    
+    // Ear hair
+    &::before,
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: 34%;
+        height: 10%;
+        width: 5%;
+        border-radius: 50%;
+        background: $color-black;
+    }
+    
+    &::after {
+        transform-origin: 50% 100%;
+    }
 }
 
 .ear--left {
-	left: -7%;
-	border-radius: 70% 30% 0% 0% / 100% 100% 0% 0%;
-	transform: rotate(-15deg);
-	
-	&::before,
-	&::after {
-		right: 10%;
-	}
-	
-	&::after {
-		transform: rotate(-45deg);
-	}
+    left: -7%;
+    border-radius: 70% 30% 0% 0% / 100% 100% 0% 0%;
+    transform: rotate(-15deg);
+    
+    &::before,
+    &::after {
+        right: 10%;
+    }
+    
+    &::after {
+        transform: rotate(-45deg);
+    }
 }
 
 .ear--right {
-	right: -7%;
-	border-radius: 30% 70% 0% 0% / 100% 100% 0% 0%;
-	transform: rotate(15deg);
-	
-	&::before,
-	&::after {
-		left: 10%;
-	}
-	
-	&::after {
-		transform: rotate(45deg);
-	}
+    right: -7%;
+    border-radius: 30% 70% 0% 0% / 100% 100% 0% 0%;
+    transform: rotate(15deg);
+    
+    &::before,
+    &::after {
+        left: 10%;
+    }
+    
+    &::after {
+        transform: rotate(45deg);
+    }
 }
 
 // Face
 .face {
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	background: $color-black;
-	border-radius: 50%;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: $color-black;
+    border-radius: 50%;
 }
 
 // Eyes
 .eye {
-	position: absolute;
-	top: 35%;
-	height: 30%;
-	width: 31%;
-	background: $color-white;
-	border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
-	
-	// Eyelids
-	&::after {
-		content: '';
-		position: absolute;
-		top: 0;
-		left: 0;
-		height: 0;
-		width: 100%;
-		border-radius: 0 0 50% 50% / 0 0 40% 40%;
-		background: $color-black;
-		animation: blink 4s infinite ease-in;
-	}
-	
-	@keyframes blink {
-		0% { height: 0; }
-		90% { height: 0; }
-		92.5% { height: 100%; }
-		95% { height: 0; }
-		97.5% { height: 100%; }
-		100% { height: 0; }
-	}
-	
-	// Tips of the eyes
-	&::before {
-		content: '';
-		position: absolute;
-		top: 60%;
-		height: 10%;
-		width: 15%;
-		background: $color-white;
-		border-radius: 50%;
-	}
+    position: absolute;
+    top: 35%;
+    height: 30%;
+    width: 31%;
+    background: $color-white;
+    border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
+    
+    // Eyelids
+    &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 0;
+        width: 100%;
+        border-radius: 0 0 50% 50% / 0 0 40% 40%;
+        background: $color-black;
+        animation: blink 4s infinite ease-in;
+    }
+    
+    @keyframes blink {
+        0% { height: 0; }
+        90% { height: 0; }
+        92.5% { height: 100%; }
+        95% { height: 0; }
+        97.5% { height: 100%; }
+        100% { height: 0; }
+    }
+    
+    // Tips of the eyes
+    &::before {
+        content: '';
+        position: absolute;
+        top: 60%;
+        height: 10%;
+        width: 15%;
+        background: $color-white;
+        border-radius: 50%;
+    }
 }
 
 .eye--left {
-	left: 0;
-	
-	&::before {
-		right: -5%;
-	}
+    left: 0;
+    
+    &::before {
+        right: -5%;
+    }
 }
 
 .eye--right {
-	right: 0;
-	
-	&::before {
-		left: -5%;
-	}
+    right: 0;
+    
+    &::before {
+        left: -5%;
+    }
 }
 
 // Pupils
 .eye-pupil {
-	position: absolute;
-	top: 25%;
-	height: 50%;
-	width: 20%;
-	background: $color-black;
-	border-radius: 50%;
-	animation: look-around 4s infinite;
-	
-	@keyframes look-around {
-		0% { transform: translate(0) }
-		5% { transform: translate(50%, -25%) }
-		10% { transform: translate(50%, -25%) }
-		15% { transform: translate(-100%, -25%) }
-		20% { transform: translate(-100%, -25%) }
-		25% { transform: translate(0, 0) }
-		100% { transform: translate(0, 0) }
-	}
-	
-	.eye--left & {
-		right: 30%;
-	}
-	
-	.eye--right & {
-		left: 30%;
-	}
-	
-	// Glare on the pupil
-	&::after {
-		content: '';
-		position: absolute;
-		top: 30%;
-		right: -5%;
-		height: 20%;
-		width: 35%;
-		border-radius: 50%;
-		background: $color-white;
-	}
+    position: absolute;
+    top: 25%;
+    height: 50%;
+    width: 20%;
+    background: $color-black;
+    border-radius: 50%;
+    animation: look-around 4s infinite;
+    
+    @keyframes look-around {
+        0% { transform: translate(0) }
+        5% { transform: translate(50%, -25%) }
+        10% { transform: translate(50%, -25%) }
+        15% { transform: translate(-100%, -25%) }
+        20% { transform: translate(-100%, -25%) }
+        25% { transform: translate(0, 0) }
+        100% { transform: translate(0, 0) }
+    }
+    
+    .eye--left & {
+        right: 30%;
+    }
+    
+    .eye--right & {
+        left: 30%;
+    }
+    
+    // Glare on the pupil
+    &::after {
+        content: '';
+        position: absolute;
+        top: 30%;
+        right: -5%;
+        height: 20%;
+        width: 35%;
+        border-radius: 50%;
+        background: $color-white;
+    }
 }
 
 // Muzzle
 .muzzle {
-	position: absolute;
-	top: 60%;
-	left: 50%;
-	height: 6%;
-	width: 10%;
-	background: $color-white;
-	transform: translateX(-50%);
-	border-radius: 50% 50% 50% 50% / 30% 30% 70% 70%;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    height: 6%;
+    width: 10%;
+    background: $color-white;
+    transform: translateX(-50%);
+    border-radius: 50% 50% 50% 50% / 30% 30% 70% 70%;
+}
+
+// Responsive adjustments - le chat s'adapte automatiquement
+@include mixins.breakpoint(mobile) {
+    .cat {
+        height: 60%; // Plus petit sur mobile pour économiser l'espace
+    }
+}
+
+@include mixins.breakpoint(small) {
+    .cat {
+        height: 65%; // Légèrement plus grand sur petits écrans
+    }
+}
+
+@include mixins.breakpoint(medium) {
+    .cat {
+        height: 70%; // Taille standard sur tablettes
+    }
+}
+
+@include mixins.breakpoint(large) {
+    .cat {
+        height: 72%; // Légèrement plus grand sur desktop
+    }
+}
+
+@include mixins.breakpoint(extra) {
+    .cat {
+        height: 75%; // Plus grand sur grands écrans
+    }
+}
+
+@include mixins.breakpoint(extra-large) {
+    .cat {
+        height: 77%; // Encore plus grand sur très grands écrans
+    }
+}
+
+@include mixins.breakpoint(ultra) {
+    .cat {
+        height: 78%; // Optimal pour ultra grands écrans
+    }
+}
+
+@include mixins.breakpoint(huge) {
+    .cat {
+        height: 80%; // Maximum pour écrans géants (2000px+)
+        // Le chat occupe plus d'espace sur les énormes écrans
+    }
 }
