--- a/views/templates/subpages/_footer.html.twig
+++ b/views/templates/subpages/_footer.html.twig
@@ -3,15 +3,14 @@
     
     <div class="foot-box">
         <div class="timer" role="timer" aria-live="polite">
-             <div class="catCSS">
+            <div class="catCSS">
                 {% include "subpages/_catcss.html.twig" %}
             </div>
             <p>Temps écoulé: <span id="time">00:00:00</span></p>
-            </div>
         </div>
         
         <div class="retour-haut">
-            <img id="backToTopButton" class="topButton" src="assets/img/Miaou/retourHautPage.png" alt="image de flèche de retour haut">
+            <img id="backToTopButton" class="topButton" src="assets/img/Miaou/retourHautPage.png" alt="Retour en haut de page">
         </div>
     </div>
     
